<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="viewPagerMain" type="id" />
    <item name="tabMain" type="id" />
    <item name="swipeRefresh" type="id" />
    <item name="rvScore" type="id" />
    <item name="ItemTxtTanggal" type="id" />
    <item name="ItemTxtHome" type="id" />
    <item name="ItemTxtHomeScore" type="id" />
    <item name="ItemTxtAwayScore" type="id" />
    <item name="ItemTxtAway" type="id" />
    <item name="ItemCvParent" type="id" />
    <item name="DetailIMGHome" type="id" />
    <item name="DetailIMGAway" type="id" />
    <item name="detailTXTHome" type="id" />
    <item name="detailTXTAway" type="id" />
    <item name="DetailItemTxtHomeScore" type="id" />
    <item name="DetailItemTxtAwayScore" type="id" />
    <item name="detailGoalHome" type="id" />
    <item name="detailGoalAway" type="id" />
    <item name="detailLUGKHome" type="id" />
    <item name="detailLUGKDefendersHome" type="id" />
    <item name="detailLUGKMildfielderHome" type="id" />
    <item name="detailLUGKForwardsHome" type="id" />
    <item name="detailLUGKSubstituesHome" type="id" />
    <item name="detailLUGKAway" type="id" />
    <item name="detailLUGKDefendersAway" type="id" />
    <item name="detailLUGKMildfielderAway" type="id" />
    <item name="detailLUGKForwardsAway" type="id" />
    <item name="detailLUGKSubstituesAway" type="id" />
    <item name="btnFavourite" type="id" />
    <item name="rvScorePrevious" type="id" />
    <item name="rvScoreFavourite" type="id" />
    <item name="frameLayout" type="id" />
    <item name="navigation" type="id" />
    <item name="rvTeam" type="id" />
    <item name="ItemTxtNama" type="id" />
    <item name="ItemIvLogo" type="id" />
    <item name="spinner" type="id" />
    <item name="ivLogoTeam" type="id" />
    <item name="ItemTxtTahun" type="id" />
    <item name="ItemTxtStadium" type="id" />
    <item name="viewPager" type="id" />
    <item name="frameTeam" type="id" />
    <item name="tabTeam" type="id" />
    <item name="txtOverview" type="id" />
    <item name="rvPlayer" type="id" />
    <item name="btnSearch" type="id" />
    <item name="rvScoreFavouriteTeam" type="id"/>
</resources>