<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_matches"
        android:title="Matches" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_team"
        android:title="Team" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favourite"
        android:title="Favorites" />

</menu>